test/files/pos/t2433/A.java
class A223 extends B223.Inner {
    static class Inner {}
    void foo() {}
}