test/files/neg/t7386/MyClass.java

public class MyClass extends MyClassBase {
  public static void myStaticBaseMethead() {}
}
